Fix screen overflow for large numbers

--- a/style.css
+++ b/style.css
@@ -52,12 +52,14 @@ footer {
 }
 
 .screen {
-    flex: 1;
+    word-wrap: break-word;
+    flex: 0.9;
+    display: flex;
+    flex-direction: column;
     margin: 0.35rem;
     background-color:  #2b2d42 ;
     border-radius: 1.75%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 4px, rgba(0, 0, 0, 0.25) 0px 7px 13px -3px, rgba(0, 0, 0, 0.15) 0px -3px 0px inset;
-    position: relative;
 }
 
 .line {
@@ -71,14 +73,14 @@ footer {
     border-radius: 10%;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.75);
     background-color:  rgba(255, 255 ,255, 0.04);
-    font-size: 1rem;
+    font-size: 0.9rem;
     border: 0px;
     transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 button:hover {
   transform: scale(0.93);
-  font-size: 0.95rem;
+  font-size: 0.87rem;
   background-color: rgba(255, 255 ,255, 0.40);
 }
 
@@ -92,19 +94,20 @@ button[data-func='=']:hover {
     color:#303030;
 }
 
-.screen > p.primary  {
-    position: absolute;
-    bottom: 0.2rem;
-    right: 0.75rem;
-    font-size: 2.1rem;
+.screen > div.primary {
+    flex: 1;
+    text-align: right;
+    font-size: 1.8rem;
+    padding: 0.2rem;
 }
 
-.screen > p.secondary  {
-    position: absolute;
-    top: 0.3rem;
-    right: 1rem;
-    font-size: 1.4rem;
+.screen > div.secondary {
+    flex: 1;
+    text-align: right;
+    font-size: 1.3rem;
+    padding: 0.2rem;
 }
+
 
 @media only screen and (max-width: 768px) {
     .container {
